# nuclex-native-framework

./: .gitattributes  .gitmodules  HowToCompile.md  LICENSE  NuclexNativeFramework (msvc-14.1).sln  NuclexNativeFramework (msvc-14.2).sln  README.md  ReadMe.md  build.cmd  build.sh  nuclex-native-framework.code-workspace  scons-build.yml
Nuclex.Pixels.Native/: .gitignore  CMakeLists.txt  Nuclex.Pixels.Native (msvc-14.1).vcxproj  Nuclex.Pixels.Native (msvc-14.1).vcxproj.filters  Nuclex.Pixels.Native (msvc-14.2).vcxproj  Nuclex.Pixels.Native (msvc-14.2).vcxproj.filters  Nuclex.Pixels.Native.Test (msvc-14.1).vcxproj  Nuclex.Pixels.Native.Test (msvc-14.1).vcxproj.filters  Nuclex.Pixels.Native.Test (msvc-14.2).vcxproj  Nuclex.Pixels.Native.Test (msvc-14.2).vcxproj.filters  Nuclex.Support.Native.ref  ReadMe.md  SConstruct  build.cmd  build.sh
Nuclex.Pixels.Native/Documents/: Copyright.md  Design.md
Nuclex.Pixels.Native/Source/: Bitmap.cpp  BitmapInfo.cpp  BitmapMemory.cpp  Config.cpp  Half.cpp  PixelFormat.cpp  PixelIterator.cpp  Rectangle.cpp  Size.cpp  UInt128.cpp
Nuclex.Pixels.Native/Source/ColorModels/: ColorModelConverter.cpp  HslColor.cpp  HsvColor.cpp  RgbColor.cpp  RgbPixelIterator.cpp  YuvColor.cpp
Nuclex.Pixels.Native/Source/Errors/: FileAccessError.cpp  FileFormatError.cpp  PixelFormatError.cpp  WrongSizeError.cpp
Nuclex.Pixels.Native/Source/PixelFormats/: BitAdjust.h  BitMask.cpp  BitMask.h  BitShift.cpp  BitShift.h  ChannelHelpers.cpp  ChannelHelpers.h  ConvertPixel.FloatToFloat.inl  ConvertPixel.FloatToInt.inl  ConvertPixel.IntToFloat.inl  ConvertPixel.IntToInt.inl  ConvertPixel.cpp  ConvertPixel.h  EndianFlip.cpp  EndianFlip.h  OnPixelFormat.cpp  OnPixelFormat.h  PixelFormatConverter.cpp  PixelFormatDescription.A.inl  PixelFormatDescription.ABGR.inl  PixelFormatDescription.ARGB.inl  PixelFormatDescription.BGR.inl  PixelFormatDescription.BGRA.inl  PixelFormatDescription.R.inl  PixelFormatDescription.RA.inl  PixelFormatDescription.RG.inl  PixelFormatDescription.RGB.inl  PixelFormatDescription.RGBA.inl  PixelFormatDescription.cpp  PixelFormatDescription.h  PixelFormatQuery.cpp  SignedBitAdjust.cpp  SignedBitAdjust.h  UnsignedBitAdjust.cpp  UnsignedBitAdjust.h
Nuclex.Pixels.Native/Source/Platform/: LinuxFileApi.cpp  LinuxFileApi.h  PosixApi.cpp  PosixApi.h  PosixFileApi.cpp  PosixFileApi.h  WindowsApi.cpp  WindowsApi.h  WindowsFileApi.cpp  WindowsFileApi.h
Nuclex.Pixels.Native/Source/Scaling/: BitmapScaler.Avir.cpp  BitmapScaler.cpp  ResamplingMethod.cpp
Nuclex.Pixels.Native/Source/Storage/: BitmapCodec.cpp  BitmapSerializer.cpp  OptionalBitmap.cpp  RealFile.Linux.inl  RealFile.Posix.inl  RealFile.Windows.inl  RealFile.cpp  RealFile.h  VirtualFile.cpp
Nuclex.Pixels.Native/Tests/: BitmapTest.cpp  HalfTest.cpp  PixelFormatTest.cpp  PixelIteratorDeathTest.cpp  PixelIteratorTest.cpp  RectangleTest.cpp  SizeTest.cpp  UInt128Test.cpp
Nuclex.Pixels.Native/Tests/ColorModels/: ColorModelConverterTest.cpp  RgbPixelIteratorTest.cpp
Nuclex.Pixels.Native/Tests/PixelFormats/: BitAdjustTest.cpp  BitMaskTest.cpp  BitShiftTest.cpp  ChannelHelpersTest.cpp  EndianFlipTest.cpp  PixelFormatConverterTest.cpp  PixelFormatQueryTest.cpp  SignedBitAdjustTest.cpp  UnsignedBitAdjustTest.cpp
Nuclex.Pixels.Native/Tests/Platform/: LinuxFileApiTest.cpp  PosixApiTest.cpp  PosixFileApiTest.cpp  WindowsApiTest.cpp
Nuclex.Pixels.Native/Tests/Storage/: BitmapSerializerTest.cpp  OptionalBitmapTest.cpp  TemporaryDirectoryScope.cpp  TemporaryDirectoryScope.h  VirtualFileTest.cpp
Nuclex.Storage.Native/: .gitignore  CMakeLists.txt  Nuclex.Storage.Native (msvc-14.1).vcxproj  Nuclex.Storage.Native (msvc-14.1).vcxproj.filters  Nuclex.Storage.Native.Tests (msvc-14.1).vcxproj  Nuclex.Storage.Native.Tests (msvc-14.1).vcxproj.filters  Nuclex.Storage.Native.def  ReadMe.md  SConstruct  build.cmd  build.sh
Nuclex.Storage.Native/Source/: Blob.cpp  Config.cpp  MemoryBlob.cpp  Reader.cpp  Writer.cpp
Nuclex.Storage.Native/Source/Binary/: BinaryBlobReader.cpp  BinaryBlobWriter.cpp  BinaryReader.cpp  BinaryWriter.cpp  InputStream.cpp  OutputStream.cpp
Nuclex.Storage.Native/Source/Compression/: CompressionAlgorithm.cpp  CompressionProvider.cpp  Compressor.cpp  Decompressor.cpp  StopReason.cpp
Nuclex.Storage.Native/Source/Errors/: BadPathError.cpp  CompressionError.cpp  FileAccessError.cpp  PermissionError.cpp
Nuclex.Storage.Native/Source/Helpers/: Lexical.cpp  Lexical.h  PosixApi.cpp  PosixApi.h  ReadBuffer.cpp  ReadBuffer.h  StringHelper.cpp  StringHelper.h  WindowsApi.cpp  WindowsApi.h  WriteBuffer.cpp  WriteBuffer.h
Nuclex.Storage.Native/Source/Xml/: ExpatApi.cpp  ExpatApi.h  ExpatParser.cpp  ExpatParser.h  XmlBinaryFormat.cpp  XmlBlobReader.Impl.cpp  XmlBlobReader.Impl.h  (+8 more)
Nuclex.Storage.Native/Tests/: MemoryBlobTest.cpp
Nuclex.Support.Native/: .gitignore  CMakeLists.txt  Nuclex.Support.Native (msvc-14.1).vcxproj  Nuclex.Support.Native (msvc-14.1).vcxproj.filters  Nuclex.Support.Native (msvc-14.2).vcxproj  Nuclex.Support.Native (msvc-14.2).vcxproj.filters  Nuclex.Support.Native.Benchmark (msvc-14.1).vcxproj  Nuclex.Support.Native.Benchmark (msvc-14.1).vcxproj.filters  Nuclex.Support.Native.Benchmark (msvc-14.2).vcxproj  Nuclex.Support.Native.Benchmark (msvc-14.2).vcxproj.filters  Nuclex.Support.Native.Tests (msvc-14.1).vcxproj  Nuclex.Support.Native.Tests (msvc-14.1).vcxproj.filters  Nuclex.Support.Native.Tests (msvc-14.2).vcxproj  Nuclex.Support.Native.Tests (msvc-14.2).vcxproj.filters  Nuclex.Support.Native.cfg  Nuclex.Support.Native.doxygen.cfg  ReadMe.md  SConstruct  build.cmd  build.sh
Nuclex.Support.Native/Benchmarks/: BenchmarkMain.cpp
Nuclex.Support.Native/Documents/: Copyright.md  EventBenchmark.md  Hazard Pointers.md
Nuclex.Support.Native/Source/: Any.cpp  BitTricks.cpp  Config.cpp  Optional.cpp  ScopeGuard.cpp  TemporaryDirectoryScope.cpp  TemporaryFileScope.cpp  Variant.cpp  VariantType.cpp
Nuclex.Support.Native/Tests/: AnyTests.cpp  BitTricksTest.cpp  OptionalTests.cpp  ScopeGuardTest.cpp  TemporaryDirectoryScopeTest.cpp  TemporaryFileScopeTest.cpp  VariantTests.cpp
(+413 files in other folders)
